...
            "value": "招待番号で家族に参加"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "초대 번호로 기존 가족 참여"
          }
        },
        "pt": {
          "stringUnit": {
            "state": "translated",
            "value": "Entrar numa família com um código"
...
            "value": "つなぐ"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "연결하기"
          }
        },
        "pt": {
          "stringUnit": {
            "state": "translated",
            "value": "Conectar"
...
            "value": "保護者（ママ・パパ）"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "보호자 (엄마·아빠)"
          }
        },
        "pt": {
          "stringUnit": {
            "state": "translated",
            "value": "Responsável (mãe ou pai)"
...
